crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_if__v_if_component_with_slot.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<MyComponent v-if=\"ok\"><span>slot content</span></MyComponent>\"#)"
---
const { resolveComponent: _resolveComponent, createElementVNode: _createElementVNode, openBlock: _openBlock, createBlock: _createBlock, createCommentVNode: _createCommentVNode, withCtx: _withCtx } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("span", null, "slot content")

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MyComponent = _resolveComponent("MyComponent")
  
  return (ok)
    ? (_openBlock(), _createBlock(_component_MyComponent, { key: 0 }, {
      default: _withCtx(() => [
        _hoisted_1
      ]),
      _: 1 /* STABLE */
    }))
    : _createCommentVNode("v-if", true)
}
